# subt_solution_launch

./: .gitignore  CMakeLists.txt  README.md  hello_world_deps.rosinstall  package.xml
config/: ekf_template.yaml
config/darknet_ros/: yolo-subt-tiny.cfg  yolov2subttiny.yaml
config/move_base/: cnfig_old.yml  costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
config/robot_localization/: ekf_husky.yaml
config/rviz/: marble_husky.rviz
launch/: detect_and_report_artifacts.launch  ekf_template.launch  husky_explore.launch  marble_Husky_topics.txt  navigation.launch  robotikax2_rtabmap.rviz  rtabmap_2D_Grid_demo.launch  rtabmap_3D_Grid_demo.launch  rtabmap_demo.launch  test1.launch  x1_explore.launch
scripts/: autonomous_test.py  odom2base_transform_publisher.py  planner_barebones.py
src/: artifact_reporter.cpp  artifact_reporter_comms.cpp  base_link_costmap_projector.cpp  find_artifact_origin.cpp  pc_filter.cpp
src/x1_configs/: local_inflation
subt_solution_launch/: CMakeLists.txt  frames.gv
subt_solution_launch/config/: dwa_x1  husky_carto.rviz
subt_solution_launch/config/cartographer/: cartographer_3d.lua
subt_solution_launch/config/move_base/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
subt_solution_launch/launch/: detect_and_report_artifacts.launch  navigation.launch  yolo_v2_subt_tiny.launch
subt_solution_launch/scripts/: robot_position_listner.py
subt_solution_launch/src/: artifact_reporter.cpp  pc_filter.cpp
subt_solution_launch/src/x1_configs/: dwa_x1
